--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,24 @@
   width: 100%;
   height: 100%;
   background-color: rgb(21, 23, 25);
+  position: relative;
+}
+.header_backgroundImg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  object-fit: cover;
+  width: 350px;
+  height: 300px;
+}
+.heading_background_item {
+  width: 100%;
+  height: 100%;
+}
+.video_backGround {
+  position: absolute;
+  top: 530px;
+  left: 20px;
 }
 .container {
   padding: 0 120px;
