--- a/src/page/Home.css
+++ b/src/page/Home.css
@@ -65,6 +65,7 @@
   padding: 0.5rem 1rem;
   color: rgb(93, 93, 255);
   transition: color 0.5s ease;
+  cursor: pointer;
 }
 .signIn:hover {
   color: white;
@@ -78,6 +79,7 @@
   color: white;
   background-color: rgb(93 93 255);
   transition: background-color 0.5s ease;
+  cursor: pointer;
 }
 .signUp:hover {
   background-color: rgb(63, 63, 195);
@@ -115,6 +117,7 @@
   padding: 14px 46px;
   text-align: center;
   flex-direction: row;
+  cursor: pointer;
 }
 .startLearn {
   background-color: rgb(93 93 255);
