--- a/src/page/Login.css
+++ b/src/page/Login.css
@@ -5,9 +5,13 @@ body {
   position: relative;
   width: 100vw;
   height: 100vh;
+  background-image: url("../assets/img/black-blue-background-free-vector.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
+
 .Login_card {
-  color: white;
   margin: 0;
   position: absolute;
   top: 50%;
@@ -15,10 +19,73 @@ body {
   transform: translate(-50%, -50%);
   width: 300px;
   box-sizing: border-box;
+}
+.wrapper {
+  color: white;
+  padding: 30px 40px;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  backdrop-filter: blur(20px);
+  box-shadow: 0 0 8px rgb(248, 203, 203);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.wrapper h1 {
+  text-align: center;
+}
+.userInfor {
+  display: flex;
+  flex-direction: column;
+}
+.userInfor input {
+  margin: 16px 0;
+}
+.submitArea {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
-  background-color: rgb(37, 57, 57);
+  gap: 5px;
+}
+.saveLogin {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.saveLogin input {
+  width: 14px;
+  height: 14px;
+}
+.Btn {
+  width: 80%;
+  padding: 8px 20px;
+  color: black;
+  background-color: aliceblue;
   border-radius: 20px;
+  border: none;
+}
+.linkToRegister {
+  color: rgb(124, 124, 227);
+}
+.third-party {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.social_platformList {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.register p {
+  font-size: 14px;
+}
+.linkToRegister {
+  text-decoration: none;
 }
